@@ -647,6 +647,33 @@ function GM:PlayerSpawn(ply)
 		end
 	end
 	
+	for k,v in pairs(ents.FindInSphere(ply:GetPos(), 35)) do
+		if (v:IsPlayer() or v:GetClass() == "prop_physics") and v ~= ply then
+			local found = false
+			for i = 40, 200, 10 do
+				if util.PointContents(ply:GetPos() + Vector(i, 0, 0)) == CONTENTS_EMPTY then
+					ply:SetPos(ply:GetPos() + Vector(i, 0, 0))
+					--Yeah I found a nice position to put the player in!
+					found = true
+					break
+				end
+			end
+			if not found then
+				for i = 40, 200, 10 do
+					if util.PointContents(ply:GetPos() + Vector(0, i, 0)) == CONTENTS_EMPTY then
+						ply:SetPos(ply:GetPos() + Vector(0, i, 0))
+						found = true
+						break
+					end
+				end
+			end
+			-- If you STILL can't find it, you'll just put him on top of the other player lol
+			if not found then
+				ply:SetPos(ply:GetPos() + Vector(0,0,70))
+			end
+		end
+	end
+	
 	-- If the player for some magical reason managed to respawn while jailed then re-jail the bastard.
 	if RPArrestedPlayers[ply:SteamID()] and ply:GetTable().DeathPos then
 		-- For when CfgVars["teletojail"] == 0
