@@ -1,11 +1,13 @@
 SVN version
 
-[ADD] /demote <reason> People need to specify a reason to demote.
+[ADD] /demote <reason> People need to specify a reason to demote
+[ADD] rp_needwantedforarrest to prevent cops from random arresting
 [FIX] Version number in the help screen
 [FIX] Battering ram not working on warranted people
 [FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
+[FIX] People being able to spawn inside each other
 [CHANGE] /buypistol to /buy because of the custom items
-[remove] The easter egg.
+[remove] The easter egg :(
 
 SVN VERSTION till 150/ 2.3.5:
 Updated by: FPtje Falco
